--- a/HRPWordle2.html
+++ b/HRPWordle2.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
 
-        <link rel="stylesheet" href="HRPWordle1.css">
+        <link rel="stylesheet" href="HRPWordle.css">
         <script src="HRPWordle2.js"></script>
     </head>
 
