--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
 
-        <link rel="stylesheet" href="HRPWordle3.css">
-        <script src="HRPWordle3.js"></script>
+        <link rel="stylesheet" href="HRPWordle.css">
+
     </head>
 
     <body>
