--- a/HRPWordle5.html
+++ b/HRPWordle5.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
 
-        <link rel="stylesheet" href="HRPWordle3.css">
+        <link rel="stylesheet" href="HRPWordle7Letters.css">
         <script src="HRPWordle5.js"></script>
     </head>
 
